--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author"         : "RedHog (Egil Möller) <redhog@redhog.org>",
   "contributors"   : [],
   "dependencies"   : {
-                      "sqlite3"             : "2.1.1"
+                      "sqlite3"             : "2.1.1",
+                      "underscore"          : "1.3.3"
                      },
   "bin":             { "agpsd": "./server.js" },
   "devDependencies": {
