--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "contributors"   : [],
   "dependencies"   : {
                       "sqlite3"             : "2.1.1",
-                      "underscore"          : "1.3.3"
+                      "underscore"          : "1.3.3",
+                      "dateformat"          : "1.0.2-1.2.3"
                      },
   "bin":             { "agpsd": "./server.js" },
   "devDependencies": {
