--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies"   : {
                       "sqlite3"             : "2.1.1",
                       "underscore"          : "1.3.3",
+                      "express"             : "2.5.8",
                       "dateformat"          : "1.0.2-1.2.3"
                      },
   "bin":             { "agpsd": "./server.js" },
