--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
                       "sqlite3"             : "2.1.1",
                       "underscore"          : "1.3.3",
                       "express"             : "2.5.8",
-                      "dateformat"          : "1.0.2-1.2.3"
+                      "dateformat"          : "1.0.2-1.2.3",
+                      "async"               : "0.1.22"
                      },
   "bin":             { "agpsd": "./server.js" },
   "devDependencies": {
